# snapforge

./: .editorconfig  .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  biome.json  build-dmg.sh  deny.toml  history.html  index.html  outline.html  package-lock.json  package.json  preferences.html  recording.html  release-please-config.json  toast.html  tsconfig.json  vite.config.ts
.claude/agents/: capture-test-writer.md  ffi-safety-reviewer.md
.claude/skills/release-helper/: SKILL.md
.github/: .release-please-manifest.json  dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  release-build.yml  release-please.yml  release.yml
.husky/: pre-commit
cli/: Cargo.toml
cli/src/: main.rs
crates/screen-core/: Cargo.toml
crates/screen-core/src/: clipboard.rs  config.rs  format.rs  lib.rs  types.rs
crates/screen-core/src/capture/: macos.rs  mod.rs
crates/screen-core/src/record/: ffmpeg.rs  mod.rs
crates/screen-core/tests/: integration.rs
crates/snapforge-app/: Cargo.toml
crates/snapforge-app/src/: clicks.rs  lib.rs  recording.rs  screenshot.rs
crates/snapforge-app/tests/: integration.rs
crates/snapforge-capture/: Cargo.toml
crates/snapforge-capture/src/: clicks.rs  lib.rs
crates/snapforge-capture/src/capture/: macos.rs  mod.rs  xcap_impl.rs
crates/snapforge-core/: CHANGELOG.md  Cargo.toml
crates/snapforge-core/src/: clicks.rs  clipboard.rs  config.rs  format.rs  history.rs  lib.rs  types.rs
crates/snapforge-core/src/capture/: macos.rs  mod.rs  xcap_impl.rs
crates/snapforge-core/src/record/: ffmpeg.rs  mod.rs
crates/snapforge-core/tests/: integration.rs
crates/snapforge-domain/: Cargo.toml
crates/snapforge-domain/src/: lib.rs  types.rs
crates/snapforge-encode/: Cargo.toml
crates/snapforge-encode/src/: format.rs  lib.rs
crates/snapforge-encode/src/record/: ffmpeg.rs  mod.rs
crates/snapforge-ffi/: Cargo.toml  snapforge_ffi.h
crates/snapforge-ffi/src/: lib.rs
crates/snapforge-ffi/tests/: abi.rs
crates/snapforge-storage/: Cargo.toml
crates/snapforge-storage/src/: clipboard.rs  config.rs  history.rs  lib.rs
docs/: app-icon-mocks.html  recording-pill-mocks.html  recording-tray-click-mocks.html
docs/architecture/: README.md  ffi-boundary.md  future-direction.md  modules.md  overview.md  platform-macos.md  recording-pipeline.md
docs/superpowers/plans/: 2026-04-03-screensnap-phase1-foundation.md  2026-04-03-screensnap-phase2a-tauri-overlay.md  2026-04-03-screensnap-phase2b-annotations.md  2026-04-03-screensnap-phase2b-plus-extra-tools.md  2026-04-03-screensnap-phase2c-tray-hotkeys-prefs.md  2026-04-03-screensnap-phase2d-recording.md  2026-04-08-screencapturekit-migration.md  2026-04-10-annotation-toolbar.md  2026-04-10-qt-native-frontend.md
docs/superpowers/specs/: 2026-04-03-screensnap-design.md  2026-04-03-screensnap-phase2b-annotations-design.md  2026-04-08-screencapturekit-migration-design.md  2026-04-10-annotation-toolbar-design.md  2026-04-10-qt-native-frontend-design.md  2026-04-10-recording-history-preferences-design.md
packaging/macos/: build_dmg.sh  build_iconset.py  bundle-ffmpeg.sh
qt/: CMakeLists.txt  Info.plist.in  build.sh
qt/mock/: tray-stop-icon.html
qt/resources/: AppIcon.icns  snapforge.qrc
qt/scripts/: build_dmg.sh  build_iconset.py  bundle-ffmpeg.sh
qt/src/: Annotation.h  AnnotationCanvas.cpp  AnnotationCanvas.h  AnnotationRenderer.cpp  AnnotationRenderer.h  AnnotationState.cpp  AnnotationState.h  AnnotationToolbar.cpp  AnnotationToolbar.h  ClickEventTap.h  ClickEventTap.mm  ClickIndicatorOverlay.cpp  ClickIndicatorOverlay.h  HistoryWindow.cpp  HistoryWindow.h  OverlayWindow.cpp  OverlayWindow.h  PreferencesWindow.cpp  PreferencesWindow.h  RecordingManager.cpp  RecordingManager.h  SpaceChangeObserver.mm  WorkspaceSleepObserver.h  WorkspaceSleepObserver.mm  main.cpp
qt/src/app/: main.cpp
qt/src/capture/: RecordingManager.cpp  RecordingManager.h
qt/src/controllers/: ClickTap.cpp  ClickTap.h  RecordingController.cpp  RecordingController.h
qt/src/infra/: LogCategories.cpp  LogCategories.h  Logger.cpp  Logger.h  Shortcuts.cpp  Shortcuts.h  SnapforgeClient.cpp  SnapforgeClient.h  SnapforgeClientFake.cpp  SnapforgeClientTesting.h
qt/src/platform/macos/: SpaceChangeObserver.h  WorkspaceSleepObserver.mm
qt/src/ui/annotation/: Annotation.h  AnnotationCanvas.cpp  AnnotationCanvas.h  AnnotationRenderer.cpp  AnnotationState.cpp  AnnotationState.h  AnnotationToolbar.cpp
qt/src/ui/overlay/: ClickIndicatorOverlay.cpp  ClickIndicatorOverlay.h  ClickIndicatorOverlayMac.mm  OverlayWindow.cpp  OverlayWindow.h
qt/src/ui/tray/: TrayIcon.cpp  TrayIcon.h
qt/src/ui/windows/: HistoryWindow.cpp  HistoryWindow.h  PreferencesWindow.cpp  PreferencesWindow.h
qt/tests/: tst_clicktap.cpp  tst_composite_dpr.cpp  tst_preferences.cpp  tst_recordingmanager.cpp  tst_shortcuts.cpp  tst_smoke.cpp  tst_snapforgeclient.cpp
scripts/: download-ffmpeg.sh
src/: App.svelte  history-main.ts  preferences-main.ts  recording-main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hotkeys.rs  main.rs  recording.rs  tray.rs
src/lib/: ErrorBoundary.svelte  toast.ts
src/lib/annotation/: Canvas.svelte  Toolbar.svelte  compositing.test.ts  compositing.ts  state.svelte.ts
src/lib/annotation/tools/: arrow.test.ts  arrow.ts  blur.test.ts  blur.ts  callout.ts  circle.ts  colorpicker.ts  dottedline.test.ts  dottedline.ts  freehand.ts  highlight.ts  line.test.ts  line.ts  measure.ts  rect.test.ts  rect.ts  registry.test.ts  registry.ts  steps.ts  text.ts  types.ts
src/lib/history/: History.svelte  HistoryApp.svelte
src/lib/overlay/: Overlay.svelte  RegionSelector.svelte
src/lib/preferences/: GeneralTab.svelte  HotkeysTab.svelte  Preferences.svelte  PreferencesApp.svelte  RecordingTab.svelte  ScreenshotsTab.svelte
src/lib/recording/: Indicator.svelte  RecordingApp.svelte
src/styles/: global.css  preferences.css
