[workspace]
resolver = "2"
members = [
    "crates/snapforge-core",
    "crates/snapforge-ffi",
    "cli",
    "src-tauri",
]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

[workspace.lints.rust]
unsafe_code = "allow"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
uninlined_format_args = "allow"
semicolon_if_nothing_returned = "allow"
needless_pass_by_value = "allow"
wildcard_imports = "allow"
unused_self = "allow"
struct_excessive_bools = "allow"
unreadable_literal = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
similar_names = "allow"
too_many_lines = "allow"
manual_string_new = "allow"
unnecessary_wraps = "allow"
