[workspace]
resolver = "2"
members = [
    "crates/snapforge-domain",
    "crates/snapforge-capture",
    "crates/snapforge-encode",
    "crates/snapforge-storage",
    "crates/snapforge-app",
    "crates/snapforge-ffi",
]

[workspace.dependencies]
# Structured diagnostics. Crates emit via the `tracing` macros; the FFI layer
# installs a subscriber that bridges records to the Qt logger (see
# snapforge-ffi). `tracing-subscriber` is only needed where a subscriber is
# installed, so it's pulled in directly by snapforge-ffi rather than here.
tracing = "0.1"
# Data-parallel pixel work (channel-swap, encode prep) on the screenshot path.
rayon = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
# A Rust panic unwinding across the extern "C" FFI boundary into Qt is UB.
# Abort instead of unwind so a panic terminates cleanly rather than corrupting the C++ stack.
# Cargo forces unwind for test/bench builds regardless, so the test suite is unaffected.
panic = "abort"

[profile.dev]
opt-level = 1
panic = "abort"

[workspace.lints.rust]
unsafe_code = "allow"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
uninlined_format_args = "allow"
semicolon_if_nothing_returned = "allow"
needless_pass_by_value = "allow"
wildcard_imports = "allow"
unused_self = "allow"
struct_excessive_bools = "allow"
unreadable_literal = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
similar_names = "allow"
too_many_lines = "allow"
manual_string_new = "allow"
unnecessary_wraps = "allow"
