[package]
name = "snapforge-cli"
version = "1.3.0" # x-release-please-version
edition = "2021"

[[bin]]
name = "snapforge"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
snapforge-core = { path = "../crates/snapforge-core" }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
