[package]
name = "snapforge-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snapforge-core = { path = "../crates/snapforge-core" }
base64 = "0.22"
image = "0.25"
open = "5"
urlencoding = "2"

[lints]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
