[package]
name = "screen-core"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"
arboard = "3"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"
