[package]
name = "snapforge-capture"
version = "1.3.9"
edition = "2021"
publish = false

[dependencies]
snapforge-domain = { path = "../snapforge-domain" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "rayon"] }
thiserror = "2"
tracing = { workspace = true }
rayon = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSArray", "NSError"] }
objc2-core-graphics = { version = "0.3", default-features = false, features = ["CGImage", "CGDataProvider", "objc2"] }
objc2-screen-capture-kit = { version = "0.3", features = [
    "SCShareableContent",
    "SCStream",
    "SCScreenshotManager",
    "block2",
    "objc2-core-graphics",
    "objc2-core-media",
    "objc2-core-foundation",
] }
block2 = "0.6"

[target.'cfg(not(target_os = "macos"))'.dependencies]
xcap = "0.9.3"

[lints]
workspace = true
