[package]
name = "snapforge-core"
version = "1.3.0" # x-release-please-version
edition = "2021"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"
arboard = "3"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSArray", "NSError"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2-core-graphics = { version = "0.3", default-features = false, features = ["CGImage", "CGDataProvider", "objc2"] }
objc2-screen-capture-kit = { version = "0.3", features = [
    "SCShareableContent",
    "SCStream",
    "SCScreenshotManager",
    "block2",
    "objc2-core-graphics",
    "objc2-core-media",
    "objc2-core-foundation",
] }
block2 = "0.6"

[target.'cfg(not(target_os = "macos"))'.dependencies]
xcap = "0.9.3"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
