[package]
name = "snapforge-core"
version = "1.3.11"
edition = "2021"

[dependencies]
snapforge-domain = { path = "../snapforge-domain" }
snapforge-capture = { path = "../snapforge-capture" }
snapforge-encode = { path = "../snapforge-encode" }
snapforge-storage = { path = "../snapforge-storage" }
thiserror = "2"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
