[package]
name = "snapforge-encode"
version = "1.3.9"
edition = "2021"

[dependencies]
snapforge-domain = { path = "../snapforge-domain" }
snapforge-capture = { path = "../snapforge-capture" }
snapforge-storage = { path = "../snapforge-storage" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "rayon"] }
thiserror = "2"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
