[package]
name = "snapforge-ffi"
version = "0.1.0"
edition = "2021"

[lib]
# `rlib` so integration tests under `tests/` can call the extern "C" wrappers
# directly. `staticlib` is what the Qt frontend links against.
crate-type = ["staticlib", "rlib"]

[dependencies]
snapforge-core = { path = "../snapforge-core" }
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
