[package]
name = "snapforge-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# `rlib` so integration tests under `tests/` can call the extern "C" wrappers
# directly. `staticlib` is what the Qt frontend links against.
crate-type = ["staticlib", "rlib"]

[dependencies]
snapforge-core = { path = "../snapforge-core" }
snapforge-app = { path = "../snapforge-app" }
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
tracing = { workspace = true }
# Only the FFI layer installs a subscriber (the bridge to the Qt logger), so
# tracing-subscriber lives here rather than in [workspace.dependencies].
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "fmt", "std"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
