[package]
name = "snapforge-storage"
version = "1.3.9"
edition = "2021"
publish = false

[dependencies]
snapforge-domain = { path = "../snapforge-domain" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"
chrono = "0.4"
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSArray", "NSError"] }

[target.'cfg(windows)'.dependencies]
arboard = "3"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
